--- a/scss/pages/_landing.scss
+++ b/scss/pages/_landing.scss
@@ -2,7 +2,7 @@
     position: relative;
 
     &-bg {
-        background-image: url(../../img/mobile/image-hero.jpg);
+        background-image: url(../img/mobile/image-hero.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 800px;
@@ -134,7 +134,7 @@
 
     @media screen and (min-width:768px) {
         &-bg {
-            background-image: url(../../img/desktop/image-hero.jpg);
+            background-image: url(../img/desktop/image-hero.jpg);
             background-repeat: no-repeat;
             background-position: top center;
             background-size: cover;
